# Agenix

./: .gitignore  README.md  app.py  auth.py  database.py  graph.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py
agents/: coder.py  enhancer.py  normal.py  researcher.py  supervisor.py  validator.py
config/: llm_tools.py
notebooks/: app.ipynb
static/: style.css
templates/: base.html  chat.html  index.html  login.html  signup.html
